--- a/res/layout/cropimage.xml
+++ b/res/layout/cropimage.xml
@@ -25,7 +25,7 @@
             android:id="@+id/image"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
-            class="com.android.camera.CropImageView"
+            class="com.jaumo.cropimage.CropImageView"
             android:background="#55000000"/>
        
     </RelativeLayout>
