--- a/res/layout/cropimage.xml
+++ b/res/layout/cropimage.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
      Copyright (C) 2007 The Android Open Source Project
 
      Licensed under the Apache License, Version 2.0 (the "License");
@@ -14,21 +13,25 @@
      See the License for the specific language governing permissions and
      limitations under the License.
 -->
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             android:layout_width="fill_parent"
-             android:layout_height="fill_parent">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-    <RelativeLayout
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:orientation="horizontal">
+    <com.jaumo.cropimage.CropImageView
+        android:id="@+id/image"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1" />
 
-        <view
-            android:id="@+id/image"
-            class="com.jaumo.cropimage.CropImageView"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:background="#55000000"/>
+    <TextView
+        android:id="@+id/saveButton"
+        android:textAllCaps="true"
+        android:textSize="18sp"
+        android:layout_width="match_parent"
+        android:layout_height="56dp"
+        android:text="@string/crop_save_text"
+        android:gravity="center_horizontal|center_vertical"
+        android:textColor="#FFFFFF" />
 
-    </RelativeLayout>
-</FrameLayout>
+</LinearLayout>
